[metadata]
name = simple_toolbox
version = 0.1.7
author = Jiefu Chen
author_email = keppa1991@163.com
description = A simple collection of python utils
long_description = file: README.md
long_description_content_type = text/markdown
keywords = utils
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Unix
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.11
install_requires =
    aiohttp>=3.8.4
    cryptography>=41.0.1
    Cython>=0.29.35
    easyocr>=1.7.0
    getmac>=0.9.4
    pandas>=2.0.2
    Pillow>=9.5.0
    psutil>=5.9.5
    PyNaCl>=1.5.0
    PyYAML>=6.0
    selectolax>=0.3.14

[options.packages.find]
where = src

[build_ext]
inplace=1